apply plugin: 'java'
apply plugin: 'eclipse'

defaultTasks('zip')

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

sourceSets {
	mainSource {
		java {
			srcDir('dist/game/data/scripts')
		}
	}
}

repositories {
    mavenCentral()
}

configurations.all {
    transitive = false
}

dependencies {
	compile 'org.slf4j:slf4j-api:1.8.0-beta2'
	compile files('../L2JDevs_Core/dist/libs/mmocore.jar')
	compile files('../L2JDevs_Core/dist/libs/L2JModsEngine.jar')
	compile project(':L2JDevs_Core')
	testCompile 'org.testng:testng:6.14.3'
	testCompile 'org.mockito:mockito-core:2.23.4'
}

task zip(type: Zip) {
	def fileName = 'L2JDevs_Data_' + new Date().format("yyyy-MM-dd")
	baseName = fileName
	from('dist')
	println 'Build in build/distributions/' + fileName + '.zip'
}

build.finalizedBy(zip)

eclipse {
	project {
		name = 'L2JDevs_Data'
		comment 'L2JDevs Server Project'
		natures 'org.eclipse.buildship.core.gradleprojectbuilde'
	}
}